# golf-simulator

./: README.md  __init__.py  main.py  pyproject.toml
data/: golfer_performance_data.json
golf/: data_loader.py  models.py  simulator.py  stats.py
tests/: test_dataloader.py  test_models.py  test_simulator.py  test_stats.py
